# NullNote

./: .gitignore  CMakeLists.txt  README.md  mise.toml
.github/workflows/: release-zip.yml
scripts/: generate_icon.ps1
src/: linkawareplaintextedit.cpp  linkawareplaintextedit.h  main.cpp  notewindow.cpp  notewindow.h
